tests/neg/match-infix.scala
def f = 1 + 1 match {
  case 2 => 3
} + 1   // error
